# math

./: .gitmodules  CMakeLists.txt  Cargo.toml  ddm.cds.mtx  iss.ods  jac.pps  main.c  mod0  mod1  mod2  nddm.cds.mtx  num.c  smp0  smp1  smp2
apps/sle-dct/: CMakeLists.txt
apps/sle-dct/src/: hlb.c  sle_ddm.c  sle_hlb.c  sle_test.c
bgs/dcg/: CMakeLists.txt
bgs/dcg/include/bgs/: dcg.h
bgs/dcg/include/dcg/: dcg_als.h
bgs/dcg/src/: dcg.c  dcg_als.c
bgs/dcg/test/: asp_test.c
bgs/dcg/test/dat/: case1
bgs/dcg/test/data/: conn.dcg  fbig.dcg
bgs/dcg/test/dcg/: dcg_test.c
bgs/dcg/test/rep/: case1  case2  case3
cmd/prll/mpi/: CMakeLists.txt  mlt.c  nrm.c
cmd/sle/: CMakeLists.txt
cmd/sle/src/: ddm.c  hlb.c  test.c
cmd/vec/iss/: CMakeLists.txt  cds_ddm.c  csj_cnv.c  jac.c  los.c  rlx.c
dsa/: CMakeLists.txt
dsa/include/dsa/: cut.h  hset.h  pque.h  sll.h  type.h
dsa/include/heap/: heap.h
dsa/src/: heap.c  ihset.c  ipque.c  isll.c  phset.c  ppque.c  psll.c
dsa/src/hset/: ihset.c  uhset.c
dsa/src/pque/: ipque.c  ppque.c  pque.h  upque.c
dsa/src/sll/: isll.c  psll.c
dsa/test/: hset_test.c  pque_test.c  sll_test.c
ext/: CMakeLists.txt
ext/include/ext/: cut.h  dll.h  hset.h  pque.h  sll.h  type.h
ext/src/hset/: ihset.c  uhset.c
ext/src/pque/: dpque.c  ipque.c  ppque.c  upque.c
ext/src/sll/: isll.c  psll.c
gds/: CMakeLists.txt
gds/include/gds/: hset.h  pque.h  ssll.h
gds/src/: ihset.c  ipque.c  issll.c  phset.c  ppque.c  pssll.c
gds/test/pque/: pque_test.c
gmp/dcg/: CMakeLists.txt
gmp/dcg/include/: dcg_als.h
gmp/dcg/src/: dcg_als.c
gmp/dcg/test/: dcg_als_test.cc
gmp/dcg/test/dcg/: comp.dcg  full.dcg  run.sh  sbig.dcg
gmp/dcg/test/report/: fwp_comp.rep  fwp_conn.rep  fwp_full.rep  fwp_smpl.rep
math/: CMakeLists.txt  def.h  main.c
math/include/: dmtx.h  dsle.h  mtx.h  pmtx.h  sle.h  smtx.h  vec.h
math/mtx/: dmtx.c  dmtx.h  mtx.h  mtx_dns.c  mtx_dns.h  mtx_pfl.c  mtx_pfl.h  smtx.c  smtx.h
math/sle/: dsle.c  sle.h  sle_dns.c  sle_pfl.c  ssle.c
math/src/: dmtx.c  dsle.c  euler.c  pmtx.c  smtx.c  ssle.c  vec.c
math/vec/: vec.c  vec.h
pde/fem/sse/: CMakeLists.txt
pde/fem/sse/include/: sll.h  ull.h
pde/fem/sse/include/fem/: const.h  fce.h  fem.h  hex.h  vtx.h
pde/fem/sse/src/: const.h  fce.c  fem.c  hex.c  sll.c  ull.c  vtx.c
pde/fem/sse/test/: SolidStateEquationFractureTest.cc  SolidStateEquationInnerNodeTest.cc  SolidStateEquationSingleElementTest.cc  sse_sem_test.cc  sse_test.cc  test_case1.c  test_case2.c  test_case3.c  test_case4.c  test_case5.c
pde/fem/sse/test/dat/: mesh1  mesh2  mesh3  mesh4  mesh5
pde/fem/sse/test/rep/: case1_mesh1  case1_mesh2  case1_mesh3  case1_mesh4  case2_mesh5  case3_mesh6  case4_mesh1  case5
prll/: CMakeLists.txt
prll/include/: hw.h  prt.h
prll/mpi/: hw.c
prll/src/: hw.c  prt.c
vec/: CMakeLists.txt  vec.c  vec.h
vec/dfs/: CMakeLists.txt
vec/dfs/include/: dfs.h  dfs_red.h
vec/dfs/src/: dfs.c  sle_dns.c
vec/dss/: CMakeLists.txt
vec/dss/include/: dss_csj.h  dss_sky.h
vec/dss/include/numx/vec/: dss.h
vec/dss/include/vec/: dss.h  dss_csj.h  dss_sky.h
vec/dss/src/: dss_csj.c  dss_sky.c  idss.c  sle_pfl.c
vec/dss/test/: dss_csj_test.cc  test_imp.c
vec/include/: mtx.h  sle.h  vec.h
vec/iss/: CMakeLists.txt
vec/iss/include/: iss.h  iss_cds.h  iss_cmn.h  iss_csj.h  iss_csr.h
vec/iss/include/iss/: iss_cds.h  iss_csj.h
vec/iss/include/numx/vec/: iss.h
vec/iss/include/vec/: iss.h  iss_cds.h  iss_csj.h
vec/iss/src/: diss.c  iss.c  iss_cds.c  iss_cmn.c  iss_csj.c  iss_csr.c  siss.c
vec/iss/test/: CompressedSparseJointDominantTest.cc  CompressedSparseJointHilbertTest.cc  diss_test.c  iss_csj_test.cc
vec/iss/test/csj/: csj_test.c
vec/iss/test/mtx/big-asm/: x.vec
vec/iss/test/mtx/big-sym/: jl.csj.mtx
vec/iss/test/mtx/ddm/: dr.csj.mtx  f.vec  ja.csj.mtx  lr.csj.mtx
vec/iss/test/mtx/ddm-gvn/: dr.csj.mtx  il.csj.mtx  iu.csj.mtx  jl.csj.mtx  ju.csj.mtx  lr.csj.mtx  ur.csj.mtx
vec/iss/test/mtx/ddm-neg/: dr.csj.mtx  f.vec  ia.csj.mtx  lr.csj.mtx  ur.csj.mtx
vec/iss/test/mtx/ddm-pos/: dr.csj.mtx  f.vec  ja.csj.mtx  ju.csj.mtx  lr.csj.mtx  ur.csj.mtx
vec/iss/test/mtx/hlb/: f.vec
vec/iss/test/report/: los.rep  los_big_asm.rep  los_big_sym.rep  los_ddm_neg.rep  los_ddm_pos.rep  los_dft_big_asm.rep  los_dft_big_fst.rep  los_dft_big_snd.rep  los_dft_big_sym.rep  los_dft_ddm_gvn.rep  los_dft_ddm_neg.rep  los_dft_ddm_pos.rep  los_dft_hlb_all.rep  los_dft_hlb_dft.rep  los_dft_smp.rep  los_dgl_big_asm.rep  los_dgl_big_fst.rep  los_dgl_big_snd.rep  los_dgl_big_sym.rep  los_dgl_ddm_gvn.rep  los_dgl_ddm_neg.rep  los_dgl_ddm_pos.rep  los_dgl_hlb_all.rep  los_dgl_hlb_dft.rep  los_dgl_smp.rep  los_hlb.rep  los_ilu_big_asm.rep  los_ilu_big_fst.rep  los_ilu_big_snd.rep  los_ilu_big_sym.rep  los_ilu_ddm_gvn.rep  los_ilu_ddm_neg.rep  los_ilu_ddm_pos.rep  los_ilu_hlb_all.rep  los_ilu_hlb_dft.rep  los_ilu_smp.rep
vec/mtx/: CMakeLists.txt
vec/mtx/include/: mtx_all.h  mtx_cds.h  mtx_csj.h  mtx_csr.h  mtx_pie.h  mtx_sky.h
vec/mtx/include/mtx/: mtx.h
vec/mtx/include/vec/: mtx.h  mtx_cds.h  mtx_csj.h  mtx_pie.h  mtx_sky.h
vec/mtx/src/: dmtx.c  imtx.c  jmtx.c  mtx.c  mtx_all.c  mtx_cds.c  mtx_csj.c  mtx_csr.c  mtx_pie.c  mtx_sky.c  smtx.c
vec/mtx/test/: CompressedSparseJointTest.cc  dmtx_test.c  mtx_csj_test.cc
vec/mtx/test/mtx/: dr.csj.ilu.mtx  ia.csj.mtx  lr.csj.ilu.mtx  lr.csj.mtx  ur.csj.ilu.mtx  ur.csj.mtx
vec/non/: CMakeLists.txt
vec/non/include/vec/: non.h
vec/non/src/: non.c
vec/non/test/: test_new.c  test_new_vis1.c  test_new_vis2.c  test_new_vis3.c  test_new_vis4.c  test_new_vis5.c  test_new_vis6.c  test_new_vis7.c  test_new_vis8.c  test_new_vis9.c
vec/src/: dsle.c  mtx_dg7.c  mtx_dg7.h  mtx_dgl.h  mtx_dns.c  mtx_dns.h  mtx_pfl.c  mtx_pfl.h  mtx_pie.c  mtx_pie.h  pmtx.c  pmtx.h  sle_dg7.c  sle_dg7.h  sle_dns.c  sle_dns.h  sle_pfl.c  sle_pfl.h  smtx.c  smtx.h  ssle.c  ssle.h  vec.c
vec/vec/: CMakeLists.txt
vec/vec/include/: vec.h
vec/vec/include/vec/: vec.h
vec/vec/src/: vec.c
vec/vec/test/: VectorTest.cc  vec_test.c  vec_test.cc
(+95 files in other folders)
