add_executable(jac jac.c)
add_executable(rlx rlx.c)
add_executable(los los.c)
add_executable(cds-ddm cds_ddm.c)
add_executable(csj-cnv csj_cnv.c)

target_link_libraries(jac iss)
target_link_libraries(rlx iss)
target_link_libraries(los iss)
target_link_libraries(cds-ddm mtx)
target_link_libraries(csj-cnv mtx)
